<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="计算器"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:background="@color/darkGray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvFormula"
            android:scrollbars="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:lines="3"
            android:layout_gravity="end"/>

    </ScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="5"
        android:orientation="vertical"
        android:background="@color/darkGray">

        <!--        第一排-->
        <android.widget.Button
            android:id="@+id/btClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textSize="20sp"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_column="4"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <!--        第二排-->
        <android.widget.Button
            android:id="@+id/btSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textSize="20sp"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="20sp"
            android:layout_column="4"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <!--        第三排-->
        <android.widget.Button
            android:id="@+id/btFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="20sp"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="20sp"
            android:layout_column="4"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <!--        第四排-->
        <android.widget.Button
            android:id="@+id/btOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="20sp"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <ImageButton
            android:id="@+id/btGenhao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/genhao"
            android:scaleType="center"
            android:textSize="20sp"
            android:layout_column="4"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <!--        第五排-->
        <android.widget.Button
            android:id="@+id/btBaiFenHao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btDian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <android.widget.Button
            android:id="@+id/btEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textSize="20sp"
            android:layout_column="4"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

    </GridLayout>

</LinearLayout>